Stops exposing the active descendant if thecombo box is not focused

This gets around the problem whereby NVDA gets confused when it tries to retrieve the focused item right after it calls accSelect(SET_FOCUS) on a combo box and it gets back the active descendant instead of the combo box.
1. NVDA calls accSelect(SET_FOCUS) on the combo box when the user press enter while the virtual cursor is on the combo box.
2. NVDA switches to Focus Mode and tries to retrieve the focused object.
3. Since Blink's focus action is asynchronous, the focus hasn't yet been set to the combo box, so active descendant would return nullptr.
Bug: 621510
Change-Id: Icd7e925ced6a456ff6c99e76eddff8cce9caa85a
R=dmazzoni@chromium.org, aleventhal@chromium.org
Tested: manually with Jaws and NVDA